--- a/src/ipy/tutorial/s2a_get_protein_fields.ipynb
+++ b/src/ipy/tutorial/s2a_get_protein_fields.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 1b) Retrieving a protein based on its identifier\n",
-    "Get one form of PTEN in the cytosol with identifier R-HSA-199420\n",
+    "# Tutorial 2a) Retrieve identifiers for a protein.\n",
+    "Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
     "\n",
-    "[**Reactome Tutorial**: Retrieving a protein object](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n",
+    "[**Reactome Tutorial**: Retrieving identifiers for proteins or chemicals](https://reactome.org/dev/graph-database/extract-participating-molecules#identifiers-proteins-or-chemicals)\n",
     "\n",
     "## Step 1) [Connect to Neo4j loaded with the Reactome Knowledgebase](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
    ]
@@ -32,41 +32,31 @@
    "metadata": {},
    "source": [
     " ## Step 2) Query\n",
-    " ###  Get one form of PTEN in the cytosol with identifier R-HSA-199420\n",
+    " ###  Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
     " An _EntityWithAccessionedSequence_ corresponds to a protein in Reactome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    schemaClass EntityWithAccessionedSequence\n",
-      "    speciesName Homo sapiens\n",
-      "    oldStId     REACT_13069\n",
-      "    startCoordinate 2\n",
-      "    isInDisease False\n",
-      "    displayName PTEN [cytosol]\n",
-      "    stIdVersion R-HSA-199420.2\n",
-      "    dbId        199420\n",
-      "    name        ['PTEN', 'Phosphatidylinositol-3,4,5-trisphosphate 3-phosphatase PTEN', 'PTEN_HUMAN', 'MMAC1', 'TEP1']\n",
-      "    referenceType ReferenceGeneProduct\n",
-      "    endCoordinate 403\n",
-      "    stId        R-HSA-199420\n"
+      "    P60484      PTEN [cytosol]\n"
      ]
     }
    ],
    "source": [
-    "query = 'MATCH (ewas:EntityWithAccessionedSequence{stId:\"R-HSA-199420\"}) RETURN ewas'\n",
+    "query = ('MATCH (ewas:EntityWithAccessionedSequence{stId:\"R-HSA-199420\"}), '\n",
+    "         '(ewas)-[:referenceEntity]->(re:ReferenceEntity) '\n",
+    "         'RETURN ewas.displayName AS Name, re.identifier AS ID')\n",
     "\n",
     "with gdbdr.session() as session:\n",
     "    for rec in session.run(query).records():\n",
-    "        for key, val in rec['ewas'].items():\n",
-    "            print(\"    {KEY:11} {VAL}\".format(KEY=key, VAL=val))"
+    "        print(\"    {ID:11} {Name}\".format(**rec))"
    ]
   },
   {
