--- a/src/ipy/tutorial/s2b_get_protein_fields_from_nodes.ipynb
+++ b/src/ipy/tutorial/s2b_get_protein_fields_from_nodes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 2a) Retrieve identifiers for a protein.\n",
+    "# Tutorial 2a) Retrieve identifier and identifier database name for a protein.\n",
     "Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
     "\n",
     "[**Reactome Tutorial**: Retrieving identifiers for proteins or chemicals](https://reactome.org/dev/graph-database/extract-participating-molecules#identifiers-proteins-or-chemicals)\n",
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     " ## Step 2) Query\n",
-    " ###  Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
+    " ###  Get the ID, ID database, and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
     " An _EntityWithAccessionedSequence_ corresponds to a protein in Reactome"
    ]
   },
