--- a/notebooks/tutorial/s1b_get_protein.ipynb
+++ b/notebooks/tutorial/s1b_get_protein.ipynb
@@ -64,7 +64,7 @@
     "query = 'MATCH (ewas:EntityWithAccessionedSequence{stId:\"R-HSA-199420\"}) RETURN ewas'\n",
     "\n",
     "with gdbdr.session() as session:\n",
-    "    for rec in session.run(query).records():\n",
+    "    for rec in session.run(query).data():\n",
     "        for key, val in rec['ewas'].items():\n",
     "            print(\"    {KEY:11} {VAL}\".format(KEY=key, VAL=val))"
    ]
