--- a/notebooks/tutorial/s2a_get_protein_fields.ipynb
+++ b/notebooks/tutorial/s2a_get_protein_fields.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "         'RETURN ewas.displayName AS Name, re.identifier AS ID')\n",
     "\n",
     "with gdbdr.session() as session:\n",
-    "    for rec in session.run(query).records():\n",
+    "    for rec in session.run(query).data():\n",
     "        print(\"    {ID:11} {Name}\".format(**rec))"
    ]
   },
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2021, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
