--- a/notebooks/tutorial/s2b_get_protein_fields_from_nodes.ipynb
+++ b/notebooks/tutorial/s2b_get_protein_fields_from_nodes.ipynb
@@ -58,7 +58,7 @@
     "         'rd.displayName AS Database')\n",
     "\n",
     "with gdbdr.session() as session:\n",
-    "    for rec in session.run(query).records():\n",
+    "    for rec in session.run(query).data():\n",
     "        print(\"    {ID} {Database} {Name}\".format(**rec))"
    ]
   },
